# clogEx

./: .gitignore
docs/: README.md
src/: CMakeLists.txt  LogManager.cpp  LogManager.h
src/appender/: Appender.cpp  Appender.h  Console.cpp  Console.h
src/config/: Config.cpp  Config.h  ConfigFactory.cpp  ConfigFactory.h  FormatParam.cpp  FormatParam.h  Level.h  LoggerConfig.cpp  LoggerConfig.h  Param.h  Parse.cpp  Parse.h  PatternParse.cpp  PatternParse.h  RegisterManager.cpp  RegisterManager.h  TinyXmlParse.cpp  TinyXmlParse.h  config.c  config.h
src/filter/: Filter.cpp  Filter.h  FilterResult.h  FilterUtils.cpp  FilterUtils.h  ListWrapFilter.cpp  ListWrapFilter.h  ThresholdFilter.cpp  ThresholdFilter.h
src/handle/layout/: Layout.cpp  Layout.h  PatternLayout.cpp  PatternLayout.h
src/handle/layout/converter/: FormatConverter.cpp  FormatConverter.h  FormatInfo.cpp  FormatInfo.h  MessagePatternConverter.cpp  MessagePatternConverter.h
src/handle/writer/: Writer.cpp  Writer.h
src/interceptors/: Interceptor.cpp  Interceptor.h  TempParam.cpp  TempParam.h
src/layout/: Layout.cpp  Layout.h  PatternLayout.cpp  PatternLayout.h
src/layout/converter/: FormatInfo.cpp  FormatInfo.h
src/logger/: Logger.cpp  Logger.h  LoggerContext.cpp  LoggerContext.h
src/lookup/: ContextMapLookup.cpp  ContextMapLookup.h  DefaultLookupResult.cpp  DefaultLookupResult.h  Lookup.cpp  Lookup.h  LookupResult.cpp  LookupResult.h
src/marker/: Marker.cpp  Marker.h
src/message/: FormatMessageFactory.cpp  FormatMessageFactory.h  LogEvent.cpp  LogEvent.h  LogEventFactory.cpp  LogEventFactory.h  Message.cpp  Message.h  MessageFactory.cpp  MessageFactory.h  NormalLogEvent.cpp  NormalLogEvent.h  SampleMessage.cpp  SampleMessage.h
src/platform/console/: ConsoleWriter.cpp  ConsoleWriter.h  MultipleConsole.cpp  MultipleConsole.h  PCConsole.cpp  PCConsole.h
src/policy/: Policy.cpp  Policy.h
src/utils/: Exception.cpp  Exception.h  FileUtils.cpp  FileUtils.h  L.h  StrUtils.h  TimeUtils.h  hash_map_str.c  hash_map_str.h  hash_map_sync.c  hash_map_sync.h  type.h
test/main/: CMakeLists.txt  log4j2.xml  main.c  main.cpp
