cmake_minimum_required(VERSION 3.16.2)
project(logEx)

set(CMAKE_CXX_STANDARD 11)

set(src_list
        ../../third_party/tinyxml2/tinyxml2.cpp
        ../../third_party/tinyxml2/tinyxml2.h
        ../../src/config/Level.h
        ../../src/utils/StrUtils.h
        ../../src/appender/Appender.cpp
        ../../src/appender/Appender.h
        ../../src/config/ConfigFactory.cpp
        ../../src/config/ConfigFactory.h
        ../../src/appender/Console.cpp
        ../../src/appender/Console.h
        ../../src/filter/Filter.cpp
        ../../src/filter/Filter.h
        ../../src/layout/Layout.cpp
        ../../src/layout/Layout.h
        ../../src/policy/Policy.cpp
        ../../src/policy/Policy.h
        ../../src/config/Parse.h
        ../../src/config/Parse.cpp
        ../../src/logger/Logger.cpp
        ../../src/logger/Logger.h
        ../../src/config/TinyXmlParse.cpp
        ../../src/config/TinyXmlParse.h
        ../../src/config/Param.h
        ../../src/utils/Exception.cpp
        ../../src/utils/Exception.h
        ../../src/filter/ThresholdFilter.cpp
        ../../src/filter/ThresholdFilter.h
        ../../src/layout/PatternLayout.cpp
        ../../src/layout/PatternLayout.h
        ../../src/config/ConfigFactory.cpp
        ../../src/config/ConfigFactory.h
        ../../src/LogManager.cpp
        ../../src/LogManager.h
        ../../src/message/MessageFactory.cpp
        ../../src/message/MessageFactory.h
        ../../src/message/Message.cpp
        ../../src/message/Message.h
        ../../src/marker/Marker.cpp
        ../../src/marker/Marker.h
        ../../src/filter/FilterUtils.cpp
        ../../src/filter/FilterUtils.h
        ../../src/message/LogEvent.h
        ../../src/utils/FileUtils.cpp
        ../../src/utils/FileUtils.h
        ../../src/filter/ListWrapFilter.cpp
        ../../src/filter/ListWrapFilter.h
        ../../src/logger/LoggerContext.cpp
        ../../src/logger/LoggerContext.h
        ../../src/message/SampleMessage.cpp
        ../../src/message/SampleMessage.h
        ../../src/message/FormatMessageFactory.cpp
        ../../src/message/FormatMessageFactory.h
        ../../src/message/LogEventFactory.cpp
        ../../src/message/LogEventFactory.h
        ../../src/message/NormalLogEvent.cpp
        ../../src/message/NormalLogEvent.h
        ../../src/config/PatternParse.cpp
        ../../src/config/PatternParse.h
        ../../src/config/FormatParam.cpp
        ../../src/config/FormatParam.h
        ../../src/utils/L.h
        ../../src/lookup/Lookup.cpp
        ../../src/lookup/Lookup.h
        ../../src/lookup/LookupResult.cpp
        ../../src/lookup/LookupResult.h
        ../../src/lookup/DefaultLookupResult.cpp
        ../../src/lookup/DefaultLookupResult.h
        ../../src/lookup/ContextMapLookup.cpp
        ../../src/lookup/ContextMapLookup.h
        ../../src/utils/TimeUtils.h
        ../../src/platform/console/MultipleConsole.h ../../src/platform/console/PCConsole.cpp ../../src/platform/console/PCConsole.h ../../src/platform/console/MultipleConsole.cpp ../../src/filter/FilterResult.h ../../src/layout/converter/FormatInfo.cpp ../../src/layout/converter/FormatInfo.h)

add_executable(logEx
        ${src_list}
        main.cpp)
